# flexable-agents

./: .gitignore  LICENSE  README.md  config.json.example  mcp.json  pyproject.toml  requirements-dev.txt  requirements.txt  run-server.bat  run-server.ps1  server.py
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  copilot_task.yml  copilot_task_fixed.yml  feature_request.yml  sample_copilot_issue.md
.github/workflows/: ci.yml
config/templates/: m365_config_template.json  sharepoint_dev_config_template.json
config/templates/workflow_templates/: compliance_workflow.json  security_audit_workflow.json
docs/: cloud_devops_agent.md  deployment_guide.md  intranet_workflow.md  m365_admin_agent.md  sharepoint_dev_agent.md  sharepoint_monitor.md
examples/: complex_workflow.py  compliance_monitoring_workflow.py  creative_workflow.py  customer_service_workflow.py  document_management_workflow.py  employee_offboarding_workflow.py  enhanced_customer_service_workflow.py  intranet_workflow.py  m365_admin_workflow.py  mcp_agent_conversion.py  multi_agent_workflow.py  power_platform_workflow.py  presentation_analysis_workflow.py  sample_data.csv  security_audit_workflow.py  sharepoint_dev_workflow.py  text_processing_example.py  translation_workflow.py
examples/infrastructure_templates/: microservices_template.json  web_app_template.json
examples/pipeline_templates/: microservices_pipeline.yml  web_app_pipeline.yml
scripts/: deploy_spfx.ps1  migrate_sharepoint.ps1
src/: cli.py
src/agents/: api_agent.py  bookings_agent.py  cloud_devops_agent.py  creative_agent.py  customer_service_agent.py  data_processor.py  db_agent.py  enhanced_customer_service_agent.py  exchange_agent.py  file_processor.py  image_agent.py  intune_agent.py  m365_admin_agent.py  ml_agent.py  monitoring_agent.py  sharepoint_dev_agent.py  slide_agent.py  teams_agent.py  text_processor.py  translation_agent.py  visualization_agent.py
src/core/: __init__.py  base.py  base_mcp.py  mcp_bridge.py
src/cost_management/: cost_analyzer.py
src/disaster_recovery/: dr_manager.py
src/mcp/: __init__.py  config.py  handlers.py  handlers_backup.py  logging_system.py  registry.py  server.py  server_backup.py  types.py
src/monitoring/: performance_monitor.py  sharepoint_monitor.py
src/tools/: __init__.py  azure_tools.py  data_tools.py  document_tools.py  m365_tools.py  specialized_tools.py  workflow_tools.py
src/utils/: helpers.py
tests/: test_cloud_devops_agent.py  test_performance_monitor.py  test_power_platform_workflow.py  test_sharepoint_dev_agent.py  test_sharepoint_monitor.py
